--- a/src/styles/blocks/card/__description/card__description.css
+++ b/src/styles/blocks/card/__description/card__description.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 0 auto;
+  /* margin-right: 15px; */
   background: white;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
