--- a/src/styles/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
+++ b/src/styles/blocks/profile/__avatar-overlay/profile__avatar-overlay.css
@@ -1,4 +1,4 @@
-.profile__avatar_overlay {
+.profile__avatar-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -7,21 +7,21 @@
   border-radius: 100%;
 
 }
-.profile__avatar_overlay:hover {
+.profile__avatar-overlay:hover {
   background: rgba(0, 0, 0, 0.8);
-  background-image: url(./../../../../../images/editAvatar.svg);
+  background-image: url(./../../../../images/editAvatar.svg);
   background-repeat: no-repeat;
   background-position: center;
 }
 
 @media screen and (max-width: 915px) and (min-width: 661px){
-  .profile__avatar_overlay {
+  .profile__avatar-overlay {
     margin-left: 20px;
   }
 }
 
 @media screen and (max-width: 660px) and (min-width: 320px)   {
-  .profile__avatar_overlay {
+  .profile__avatar-overlay {
     width: 120px;
     margin-bottom: 26px;
   }
